// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works for Membership 1`] = `
Object {
  "graphql": Object {
    "query": "mutation($id: ID, $data: MembershipInput) {
    updateMembership(groupId: $id, data: $data) {
      id
    }
  }",
    "variables": Object {
      "data": Object {
        "newPostCount": 0,
      },
      "id": 5,
    },
  },
  "meta": Object {
    "count": 0,
    "id": 5,
    "optimistic": true,
    "type": "Membership",
  },
  "type": "RESET_NEW_POST_COUNT",
}
`;

exports[`works for Membership 2`] = `
Object {
  "graphql": Object {
    "query": "mutation($id: ID, $data: TopicFollowInput) {
    updateTopicFollow(id: $id, data: $data) {
      id
      newPostCount
      group {
        id
      }
      topic {
        id
      }
    }
  }",
    "variables": Object {
      "data": Object {
        "newPostCount": 0,
      },
      "id": 5,
    },
  },
  "meta": Object {
    "count": 0,
    "id": 5,
    "optimistic": true,
    "type": "TopicFollow",
  },
  "type": "RESET_NEW_POST_COUNT",
}
`;
